<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/display_setting_header">

    <com.android.settingslib.widget.LayoutPreference
        android:key="creator_mode_preview"
        android:layout="@layout/creator_mode_preview"
        android:selectable="false" />

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/cm_display_header">

        <SwitchPreferenceCompat
            app:key="switchCreatorMode"
            android:title="@string/cm_switch_title"
            app:summary="@string/cm_switch_description" />
    </PreferenceCategory>

    <com.android.settingslib.widget.FooterPreference
        android:key="creatorModeFooter"
        android:title="@string/cm_footer_string"
        android:selectable="false" />

</PreferenceScreen>
